--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,77 @@ body
 {
     font-family: 'Inter', sans-serif;
 }
+
+.imgmian
+{
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin-left: auto;
+}
+
+.imgicon
+{
+    font-size: 40px;
+    align-items: center;
+}
+
+.navbar ul{
+    list-style-type: none;
+    background-color: rgb(0, 0, 0);
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+}
+
+.navbar a{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
+}
+
+.navbar ba{
+    color: rgb(255, 255, 255);
+    align-items: center;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
+}
+
+.navbar a:hover{
+    background-color: rgb(46, 38, 58);
+}
+
+.navbar li{
+    flex-direction: column;
+    align-items: center;
+    float: left;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+
+}
+
+.navbar lu{
+    flex-direction: column;
+    align-items: center;
+    float: right;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.navbar la{
+    flex-direction: column;
+    align-items: center;
+    float: left;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
